@@ -1,109 +1,211 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import ru.practicum.shareit.exception.EmptyFieldException;
-import ru.practicum.shareit.exception.EntityNotFoundException;
-import ru.practicum.shareit.exception.GatewayHeaderException;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.BookingMapper;
+import ru.practicum.shareit.booking.dto.BookingDtoOut;
+import ru.practicum.shareit.booking.model.Booking;
+import ru.practicum.shareit.booking.model.BookingStatus;
+import ru.practicum.shareit.booking.repository.BookingRepository;
+import ru.practicum.shareit.exceptions.NotFoundException;
+import ru.practicum.shareit.exceptions.ValidationException;
+import ru.practicum.shareit.item.dto.CommentDto;
+import ru.practicum.shareit.item.dto.CommentDtoOut;
 import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.mapper.*;
+import ru.practicum.shareit.item.dto.ItemDtoOut;
+import ru.practicum.shareit.item.mapper.CommentMapper;
+import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.UserDto;
+import ru.practicum.shareit.user.UserMapper;
 import ru.practicum.shareit.user.service.UserService;
 
-import java.util.Collection;
+import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static ru.practicum.shareit.item.dto.mapper.ItemMapper.*;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 
 
 @Service
-@Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-
-    private final UserService userService;
     private final ItemRepository itemRepository;
+    private final CommentRepository commentRepository;
+    private final BookingRepository bookingRepository;
+    private final UserService userService;
 
     @Override
-    public ItemDto create(ItemDto itemDto, long userId) {
-        checkUserId(userId);
-        validateItemDto(itemDto);
-        log.debug("Создание элемента предмета: {}; для пользователя {}", itemDto, userId);
-        Item item = toItem(itemDto);
-        Item createdItem = itemRepository.create(item, userId);
-        return toItemDto(createdItem);
+    @Transactional
+    public ItemDtoOut add(Long userId, ItemDto itemDto) {
+        UserDto user = userService.findById(userId);
+        Item item = ItemMapper.toItem(itemDto);
+        item.setOwner((UserMapper.toUser(user)));
+        return ItemMapper.toItemDtoOut(itemRepository.save(item));
     }
 
-    @Override
-    public ItemDto update(ItemDto itemDto, long userId) {
-        checkUserId(userId);
-        checkItemId(itemDto.getId());
-        log.debug("Обновление элемента предмета: {}; для пользователя {}", itemDto, userId);
-        Item existingItem = itemRepository.getItemById(itemDto.getId());
-        Item updatedItem = toItemUpdate(itemDto, existingItem);
-        Item result = itemRepository.update(updatedItem, userId);
-        return toItemDto(result);
-    }
 
     @Override
-    public ItemDto getItemById(long itemId, long userId) {
-        checkUserId(userId);
-        checkItemId(itemId);
-        log.debug("Получение элемента предмета по ID: {}; для пользователя {}", itemId, userId);
-        Item item = itemRepository.getItemById(itemId);
-        return toItemDto(item);
+    @Transactional
+    public ItemDtoOut update(Long userId, Long itemId, ItemDto itemDto) {
+        UserDto user = userService.findById(userId);
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                            return new NotFoundException("Вещи с " + itemId + " не существует");
+                        }
+                );
+        if (!UserMapper.toUser(user).equals(item.getOwner())) {
+            throw new NotFoundException("Пользователь с id = " + userId +
+                    " не является собственником вещи id = " + itemId);
+        }
+        Boolean isAvailable = itemDto.getAvailable();
+        if (isAvailable != null) {
+            item.setAvailable(isAvailable);
+        }
+        String description = itemDto.getDescription();
+        if (description != null && !description.isBlank()) {
+            item.setDescription(description);
+        }
+        String name = itemDto.getName();
+        if (name != null && !name.isBlank()) {
+            item.setName(name);
+        }
+        return ItemMapper.toItemDtoOut(item);
     }
 
+
     @Override
-    public Collection<ItemDto> getItemsByUserId(long userId) {
-        checkUserId(userId);
-        log.debug("Получение предметов для пользователя с ID: {}", userId);
-        return itemRepository.getItemsByUserId(userId).stream()
-                .map(ItemMapper::toItemDto)
+    @Transactional
+    public ItemDtoOut findItemById(Long userId, Long itemId) {
+        userService.findById(userId);
+        Optional<Item> itemGet = itemRepository.findById(itemId);
+        if (itemGet.isEmpty()) {
+            throw new NotFoundException("У пользователя с id = " + userId + " не " +
+                    "существует вещи с id = " + itemId);
+        }
+        Item item = itemGet.get();
+        ItemDtoOut itemDtoOut = ItemMapper.toItemDtoOut(itemGet.get());
+        itemDtoOut.setComments(getAllItemComments(itemId));
+        if (!item.getOwner().getId().equals(userId)) {
+            return itemDtoOut;
+        }
+        List<Booking> bookings = bookingRepository.findAllByItemAndStatusOrderByStartAsc(item, BookingStatus.APPROVED);
+        List<BookingDtoOut> bookingDTOList = bookings
+                .stream()
+                .map(BookingMapper::toBookingOut)
+                .collect(toList());
+
+        itemDtoOut.setLastBooking(getLastBooking(bookingDTOList, LocalDateTime.now()));
+        itemDtoOut.setNextBooking(getNextBooking(bookingDTOList, LocalDateTime.now()));
+        return itemDtoOut;
+    }
+
+
+    @Override
+    @Transactional
+    public List<ItemDtoOut> findAll(Long userId) {
+        UserDto owner = userService.findById(userId);
+        List<Item> itemList = itemRepository.findAllByOwnerId(userId);
+        List<Long> idList = itemList.stream()
+                .map(Item::getId)
                 .collect(Collectors.toList());
+        Map<Long, List<CommentDtoOut>> comments = commentRepository.findAllByItemIdIn(idList)
+                .stream()
+                .map(CommentMapper::toCommentDtoOut)
+                .collect(groupingBy(CommentDtoOut::getItemId, toList()));
+
+        Map<Long, List<BookingDtoOut>> bookings = bookingRepository.findAllByItemInAndStatusOrderByStartAsc(itemList,
+                        BookingStatus.APPROVED)
+                .stream()
+                .map(BookingMapper::toBookingOut)
+                .collect(groupingBy(BookingDtoOut::getItemId, toList()));
+
+        return itemList
+                .stream()
+                .map(item -> ItemMapper.toItemDtoOut(
+                        item,
+                        getLastBooking(bookings.get(item.getId()), LocalDateTime.now()),
+                        comments.get(item.getId()),
+                        getNextBooking(bookings.get(item.getId()), LocalDateTime.now())
+                ))
+                .collect(toList());
     }
 
+
     @Override
-    public Collection<ItemDto> getItemsBySearch(String text) {
-        if (text == null || text.trim().isEmpty()) {
+    @Transactional
+    public List<ItemDtoOut> search(Long userId, String text) {
+        userService.findById(userId);
+        if (text.isBlank()) {
             return Collections.emptyList();
         }
-        log.debug("Поиск предметов по запросу: {}", text);
-        return itemRepository.getItemsBySearch(text.toLowerCase()).stream()
-                .map(ItemMapper::toItemDto)
-                .collect(Collectors.toList());
+        List<Item> itemList = itemRepository.search(text);
+        return itemList.stream()
+                .map(ItemMapper::toItemDtoOut)
+                .collect(toList());
     }
 
-    private void validateItemDto(ItemDto itemDto) {
-        if (itemDto.getAvailable() == null || itemDto.getDescription() == null || itemDto.getName() == null) {
-            throw new EmptyFieldException("Поля в элементе ItemDto не могут быть null!");
+    @Override
+    @Transactional
+    public CommentDtoOut createComment(Long userId, CommentDto commentDto, Long itemId) {
+        User user = UserMapper.toUser(userService.findById(userId));
+        Optional<Item> itemById = itemRepository.findById(itemId);
+
+        if (itemById.isEmpty()) {
+
+            throw new NotFoundException("У пользователя с id = " + userId + " не " +
+                    "существует вещи с id = " + itemId);
         }
-        if (itemDto.getName().trim().isEmpty() || itemDto.getDescription().trim().isEmpty()) {
-            throw new EmptyFieldException("Поля 'name' и 'description' в элементе ItemDto не могут быть пустыми!");
+        Item item = itemById.get();
+
+        List<Booking> userBookings = bookingRepository.findAllByUserBookings(userId, itemId, LocalDateTime.now());
+
+        if (userBookings.isEmpty()) {
+            throw new ValidationException("У пользователя с id   " + userId + " должно быть хотя бы одно бронирование предмета с id " + itemId);
         }
+
+        return CommentMapper.toCommentDtoOut(commentRepository.save(CommentMapper.toComment(commentDto, item, user)));
     }
 
-    private void checkUserId(long userId) {
-        if (userId <= 0) {
-            throw new GatewayHeaderException("Некорректный ID пользователя в заголовке: " + userId);
-        }
-        boolean userExists = userService.getAll().stream()
-                .anyMatch(user -> user.getId() == userId);
-        if (!userExists) {
-            throw new EntityNotFoundException("Пользователь с ID " + userId + " не найден.");
-        }
+    public List<CommentDtoOut> getAllItemComments(Long itemId) {
+        List<Comment> comments = commentRepository.findAllByItemId(itemId);
+
+        return comments.stream()
+                .map(CommentMapper::toCommentDtoOut)
+                .collect(toList());
     }
 
-    private void checkItemId(long itemId) {
-        if (itemId <= 0) {
-            throw new EntityNotFoundException("Некорректный ID предмета: " + itemId);
+    private BookingDtoOut getLastBooking(List<BookingDtoOut> bookings, LocalDateTime time) {
+        if (bookings == null || bookings.isEmpty()) {
+            return null;
         }
-        Item item = itemRepository.getItemById(itemId);
-        if (item == null) {
-            throw new EntityNotFoundException("Предмет с ID " + itemId + " не найден.");
+
+        return bookings
+                .stream()
+                .filter(bookingDTO -> !bookingDTO.getStart().isAfter(time))
+                .reduce((booking1, booking2) -> booking1.getStart().isAfter(booking2.getStart()) ? booking1 : booking2)
+                .orElse(null);
+    }
+
+    private BookingDtoOut getNextBooking(List<BookingDtoOut> bookings, LocalDateTime time) {
+        if (bookings == null || bookings.isEmpty()) {
+            return null;
         }
+
+        return bookings
+                .stream()
+                .filter(bookingDTO -> bookingDTO.getStart().isAfter(time))
+                .findFirst()
+                .orElse(null);
     }
 }
